# amoeba-segmenter

./: .gitignore  LICENSE  config.bash  env.yml  pyproject.toml  readme.md
code/amoeba_segmenter/: __init__.py  platemap.py  segmenter.py
containers/def/: bftools-6.13.0.def
data/validation/: manual_cell_counts.csv
data/validation/segmentation-results/: 2022.10.20_plate1.nd2_0.ome.tiff.props.csv  2022.10.20_plate1.nd2_1.ome.tiff.props.csv  2022.10.20_plate1.nd2_10.ome.tiff.props.csv  2022.10.20_plate1.nd2_11.ome.tiff.props.csv  2022.10.20_plate1.nd2_12.ome.tiff.props.csv  2022.10.20_plate1.nd2_13.ome.tiff.props.csv  2022.10.20_plate1.nd2_14.ome.tiff.props.csv  2022.10.20_plate1.nd2_15.ome.tiff.props.csv  2022.10.20_plate1.nd2_16.ome.tiff.props.csv  2022.10.20_plate1.nd2_17.ome.tiff.props.csv  2022.10.20_plate1.nd2_18.ome.tiff.props.csv  2022.10.20_plate1.nd2_19.ome.tiff.props.csv  2022.10.20_plate1.nd2_2.ome.tiff.props.csv  2022.10.20_plate1.nd2_20.ome.tiff.props.csv  2022.10.20_plate1.nd2_21.ome.tiff.props.csv  2022.10.20_plate1.nd2_22.ome.tiff.props.csv  2022.10.20_plate1.nd2_23.ome.tiff.props.csv  2022.10.20_plate1.nd2_24.ome.tiff.props.csv  2022.10.20_plate1.nd2_25.ome.tiff.props.csv  2022.10.20_plate1.nd2_26.ome.tiff.props.csv  (+163 more)
notebooks/: validate_segmentation_vs_manual.ipynb
pipeline/: 00_test_validate.py  10_convert_nd2_to_tif.sh  11_bfconvert_proxy  15_verify_conversion.py  20_launch_processing.py  21_process.sbatch  22_process.py  25_babysit_screen_segmentation.py  30_aggregate_experiment.py  30_quantify.py  40_quantify.py
